# Web-HW7

./: README.md
Web-HW7/: config.ini  my_select.py  pyproject.toml
Web-HW7/conf/: db.py  models.py  seed.py
Web-HW7/migrations/: env.py
Web-HW7/migrations/versions/: d2a2ea780943_init.py
